--- a/package.json
+++ b/package.json
@@ -19,16 +19,19 @@
     "@workos-inc/authkit-nextjs": "^0.6.1",
     "@workos-inc/node": "^7.11.0",
     "axios": "^1.7.2",
+    "mongoose": "^8.4.3",
     "next": "14.2.4",
     "react": "^18",
     "react-country-state-city": "^1.1.2",
     "react-dom": "^18",
+    "react-timeago": "^7.2.0",
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-timeago": "^4.1.7",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
